--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -6,7 +6,7 @@ article{padding: 25px;}
 #chicken{background-color: rgb(194, 113, 84);}
 #beef{background-color: coral; color: white;}
 #sushi{background-color: yellow;}
-#row{width: 100%;}
+.row{width: 100%;}
 @media (min-width: 1200px){
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
            float: left;
