--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -36,7 +36,9 @@
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
 	border: 1px solid #000;
 }
-
+.container{
+	padding: 0px;
+}
 body{
   font-weight: bold;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
